--- a/app/assets/stylesheets/components/_mobile-filters.scss
+++ b/app/assets/stylesheets/components/_mobile-filters.scss
@@ -3,10 +3,29 @@
 
   .js-enabled & {
     display: inline-block;
+    margin-left: govuk-spacing(3);
     margin-bottom: govuk-spacing(4);
     text-decoration: none;
 
     @include govuk-typography-weight-bold;
+    @include govuk-media-query($from: tablet) {
+      display: none;
+    }
+
+    position: relative;
+  }
+
+  &[aria-expanded="false"] ~ .mobile-filters-expander__icon--down {
+    display: block;
+
+    @include govuk-media-query($from: tablet) {
+      display: none;
+    }
+  }
+
+  &[aria-expanded="true"] ~ .mobile-filters-expander__icon--up {
+    display: block;
+
     @include govuk-media-query($from: tablet) {
       display: none;
     }
@@ -47,37 +66,24 @@
 @include govuk-media-query($until: tablet) {
   .js-enabled {
     .facets__box {
-      position: fixed;
-      z-index: 1000;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow-y: auto;
-      background: govuk-colour("white");
+      border-left: 5px solid #b1b4b6;
+      padding-left: govuk-spacing(2);
+      margin-bottom: govuk-spacing(3);
     }
 
     .facets__header {
-      padding: govuk-spacing(3) 0 govuk-spacing(2);
+      padding: 0 0 govuk-spacing(3) 0;
       border-bottom: 1px solid $govuk-border-colour;
-      margin: 0 govuk-spacing(3) 0 govuk-spacing(3);
       @supports (display: grid) {
         display: grid;
         grid-auto-flow: column;
       }
     }
 
-    .facets__content {
-      padding: govuk-spacing(2) govuk-spacing(3) 0;
-    }
-
     .facets__footer {
       display: block;
-      margin: govuk_spacing(3);
+      margin-top: govuk_spacing(3);
+      margin-bottom: govuk_spacing(3);
     }
 
     .facets__return-link {
@@ -98,4 +104,14 @@
       display: block;
     }
   }
+}
+
+.mobile-filters-expander__icon {
+  display: none;
+  position: absolute;
+  top: -2px;
+  left: -8px;
+  width: 25px;
+  height: 25px;
+  fill: #0b0c0c;
 }
