--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -1,4 +1,11 @@
 <div class="filter-form">
+  <% if content_item.all_content_finder? %>
+    <%= render partial: 'filter_button'%>
+  <% elsif !content_item.all_content_finder? %>
+    <% if facets.select(&:filterable?).any? %>
+      <%= render partial: 'filter_button'%>
+    <% end %>
+  <% end %>
   <% if !content_item.all_content_finder? %>
     <div id="keywords" role="search" aria-label="<%= content_item.title %>">
       <% label_text = capture do %>
@@ -27,24 +34,16 @@
 
     <div id="facet-wrapper" data-module="mobile-filters-modal" class="facets" role="search" aria-label="Search filters">
       <div class="facets__box">
+        <h2 class='govuk-visually-hidden'>Filter</h2>
         <div class="facets__header">
           <div>
             <%= render "govuk_publishing_components/components/heading", {
-              text: "Filter",
-              heading_level: 1,
-              font_size: "xl",
-              margin_bottom: 2
-            } %>
-            <%= render "govuk_publishing_components/components/heading", {
               text: sanitize("<span class=\"js-result-count govuk-!-font-weight-regular\">#{result_set_presenter.displayed_total}</span>"),
-              heading_level: 2,
+              heading_level: 3,
               font_size: "s",
               margin_bottom: 0
             } %>
           </div>
-          <button class="app-c-button-as-link facets__return-link js-close-filters" type="button">
-            Return to results
-          </button>
         </div>
         <div class="facets__content">
           <%= render facets.select(&:filterable?) %>
@@ -56,11 +55,14 @@
           </button>
         </div>
         <div class="facets__footer">
-          <%= render "govuk_publishing_components/components/button", {
-            text: sanitize("Show search results"),
-            classes: "js-close-filters js-show-results"
+        <%= render "govuk_publishing_components/components/button", {
+            text: "Go to search results",
+            href: "#js-results",
+            data_attributes: {
+              module: "govuk-skip-link",
+            }
           } %>
-        </div>
+      </div>
       </div>
     </div>
   <% end %>
