Add option to remove top border on first list item
On specialist finder pages (or finder pages where no sort options are rendered) a double border is seen since no sort options are displayed. The border on the first document list item should be removed. On the main search results page the top border on the first document list item is necessary to visually separate the sort options from the document list.

--- a/app/views/finders/_search_results.html.erb
+++ b/app/views/finders/_search_results.html.erb
@@ -5,7 +5,8 @@
 <div class="finder-results js-finder-results">
   <%= render "govuk_publishing_components/components/document_list", {
     items: local_assigns[:document_list_component_data],
-    remove_underline: true
+    remove_underline: true,
+    remove_top_border_from_first_child: result_set_presenter.has_sort_options
   } %>
 </div>
 
