--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@ $govuk-include-default-font-face: false;
 @import "govuk_publishing_components/components/document-list";
 @import "govuk_publishing_components/components/error-summary";
 @import "govuk_publishing_components/components/govspeak";
+@import "govuk_publishing_components/components/intervention";
 @import "govuk_publishing_components/components/inverse-header";
 @import "govuk_publishing_components/components/metadata";
 @import "govuk_publishing_components/components/phase-banner";
