--- a/app/assets/stylesheets/components/_option-select.scss
+++ b/app/assets/stylesheets/components/_option-select.scss
@@ -94,6 +94,10 @@
   }
 }
 
+.app-c-option-select__container--large {
+  max-height: 600px;
+}
+
 .app-c-option-select__container-inner {
   padding: govuk-spacing(1) 13px;
 }
@@ -130,6 +134,10 @@
 
   .app-c-option-select__container {
     height: 200px;
+  }
+
+  .app-c-option-select__container--large {
+    height: 600px;
   }
 
   [data-closed-on-load="true"] .app-c-option-select__container {
