--- a/app/views/components/_date-filter.html.erb
+++ b/app/views/components/_date-filter.html.erb
@@ -9,7 +9,7 @@
 %>
 <% if key && name %>
   <%= render "components/expander", { title: name } do %>
-    <div class="app-c-date-filter govuk-!-margin-bottom-0" id="<%= key %>">
+    <div class="govuk-!-margin-bottom-0" id="<%= key %>">
       <%= render "govuk_publishing_components/components/input", {
         label: {
           text: name + " after"
