Reduce duplication in FindersController & facet_collection
The facet_collection partial only ever uses the filterable facets, so we
can avoid some duplication by selecting the filterable facets in
FindersController#facets. However, there are a few callsites within the
controller which use the full list of facets, so I've introduced a new
`#all_facets` method to handle that without making it available as a
view helper method.

--- a/app/views/finders/_facet_collection.html.erb
+++ b/app/views/finders/_facet_collection.html.erb
@@ -18,12 +18,12 @@
   <% if content_item.all_content_finder? %>
     <%= render partial: 'filter_button'%>
   <% elsif !content_item.all_content_finder? %>
-    <% if facets.select(&:filterable?).any? %>
+    <% if facets.any? %>
       <%= render partial: 'filter_button'%>
     <% end %>
   <% end %>
 
-  <% if facets.select(&:filterable?).any? %>
+  <% if facets.any? %>
     <div data-module="gem-track-click" data-track-category="filterClicked"
         data-track-action="skip-Link" data-track-label="">
       <%= render "govuk_publishing_components/components/skip_link", {
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="facets__content" data-module="ga4-event-tracker" data-ga4-filter-container>
-          <% facets.select(&:filterable?).each.with_index do |facet, index| %>
+          <% facets.each.with_index do |facet, index| %>
             <%= render partial: facet, object: facet, locals: { index: } %>
           <% end %>
           <div class="facets__tags-block js-mobile-facet-tag-block"  data-module="remove-filter">
