--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -13,6 +13,15 @@
     <%= render 'govuk_publishing_components/components/contextual_breadcrumbs', content_item: content_item.as_hash, inverse: inverse, ga4_tracking: true %>
   <% end %>
 
+  <% if @show_banner %>
+    <%= render "govuk_publishing_components/components/intervention", {
+      suggestion_text: "Help improve a new GOV.UK tool",
+      suggestion_link_text: "Sign up to take part in user research",
+      suggestion_link_url: "https://surveys.publishing.service.gov.uk/s/SNFVW1/",
+      new_tab: true,
+    } %>
+  <% end %>
+
   <% if content_item.base_path == "/find-licences"%>
     <div class="govuk-!-margin-top-5">
       <%= render "govuk_publishing_components/components/intervention", {
