Remove redundant class
- select component has gem-c-select class
- but was being wrapped in an element with a gem-c-select class, which is unnecessary

--- a/app/views/finders/_taxon_facet.html.erb
+++ b/app/views/finders/_taxon_facet.html.erb
@@ -3,23 +3,20 @@
     title: "Topic"
   } do %>
     <div class="js-taxonomy-select" data-ga4-change-category="update-filter select" data-ga4-section="Topic">
-
       <%= render "govuk_publishing_components/components/select", {
         id: 'level_one_taxon',
         label: "Topic",
         full_width: true,
         options: taxon_facet.topics
-      }
-      %>
+      } %>
 
-      <div class="js-required govuk-form-group gem-c-select" data-ga4-section="Sub-topic">
+      <div class="js-required govuk-form-group" data-ga4-section="Sub-topic">
         <%= render "govuk_publishing_components/components/select", {
           id: 'level_two_taxon',
           label: "Sub-topic",
           full_width: true,
           options: taxon_facet.sub_topics
-        }
-        %>
+        } %>
       </div>
     </div>
   <% end %>
