--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -50,10 +50,14 @@
         data-analytics-ecommerce
         data-ga4-ecommerce
         data-ecommerce-start-index="<%= result_set_presenter.start_offset %>"
+        data-ga4-ecommerce-start-index="<%= result_set_presenter.start_offset %>"
         data-list-title="<%= content_item.title %>"
+        data-ga4-list-title="<%= content_item.title %>"
         data-search-query="<%= result_set_presenter.user_supplied_keywords %>"
+        data-ga4-search-query="<%= result_set_presenter.user_supplied_keywords %>"
         <% unless result_set_presenter.sort_option.nil? %>
           data-ecommerce-variant="<%= result_set_presenter.sort_option[:data_track_label] %>"
+          data-ga4-ecommerce-variant="<%= result_set_presenter.sort_option[:data_track_label] %>"
         <% end %>
         data-module="gem-track-click"
         >
