Fix metadata component indent issue
- by default the metadata component includes extra padding when the inverse option is applied
- recently added this new option, to remove that extra padding
- as not needed in this context

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -57,7 +57,7 @@
       <% end %>
 
       <% if page_metadata.any? %>
-        <% page_metadata.merge!({ inverse: inverse, margin_bottom: 2 }) %>
+        <% page_metadata.merge!({ inverse: inverse, inverse_compress: true, margin_bottom: 2 }) %>
         <%= render 'govuk_publishing_components/components/metadata', page_metadata %>
       <% end %>
     </div>
