Capitalise GA4 section value

--- a/app/views/finders/_spelling_suggestion.html.erb
+++ b/app/views/finders/_spelling_suggestion.html.erb
@@ -9,7 +9,7 @@
         ga4_link: {
           event_name: "navigation",
           type: "spelling suggestion",
-          section: "search",
+          section: "Search",
           text: suggestion[:keywords],
         }
       }
