Set expander GA4 data attrs outside component
- credit to @floehopper
- decouples the component from this app without losing any of the existing GA4 tracking

--- a/app/views/components/_date_filter.html.erb
+++ b/app/views/components/_date_filter.html.erb
@@ -8,7 +8,7 @@
   date_errors_to ||= nil
 %>
 <% if key && name %>
-  <%= render "components/expander", { title: name } do %>
+  <%= render "components/expander", { title: name, data_attributes: { "ga4-filter-parent": name } } do %>
     <div class="govuk-!-margin-bottom-0" id="<%= key %>">
       <%= render "govuk_publishing_components/components/input", {
         label: {
