Extract ga4_section onto facet subclasses
- credit to @floehopper

--- a/app/views/finders/_date_facet.html.erb
+++ b/app/views/finders/_date_facet.html.erb
@@ -7,6 +7,6 @@
     aria_controls_id: "js-search-results-info",
     date_errors_to: date_facet.error_message_to(@search_query),
     date_errors_from: date_facet.error_message_from(@search_query),
-    data_attributes:  { "ga4-filter-parent": date_facet.name }
+    data_attributes:  { "ga4-filter-parent": date_facet.ga4_section }
   } %>
 </span>
