Change expander component
- allow it to accept data attributes to be applied to the expand/collapse button
- will allow us to add GA4 tracking via a Rails/component approach and remove some JS
- likely to be a breaking change as will depend on some other stuff in a subsequent commit
- brings the component more in line with the option select component changes coming here: https://github.com/alphagov/govuk_publishing_components/pull/3750

--- a/app/views/components/_expander.html.erb
+++ b/app/views/components/_expander.html.erb
@@ -12,6 +12,7 @@
   component_helper.add_data_attribute({ "open-on-load": open_on_load })
   component_helper.add_class("app-c-expander")
   component_helper.add_class(shared_helper.get_margin_bottom) unless margin_bottom == 0
+  component_helper.add_data_attribute({ "button-data-attributes": button_data_attributes }) if local_assigns.include?(:button_data_attributes)
 %>
 <% if title %>
   <%= tag.div(**component_helper.all_attributes) do %>
