Pass GA4 tracking attributes to components
- removes the need for some of the JS around setting indexes on JS generated elements

--- a/app/views/components/_date_filter.html.erb
+++ b/app/views/components/_date_filter.html.erb
@@ -7,9 +7,10 @@
   date_errors_from ||= nil
   date_errors_to ||= nil
   data_attributes ||= nil
+  button_data_attributes ||= nil
 %>
 <% if key && name %>
-  <%= render "components/expander", { title: name, data_attributes: } do %>
+  <%= render "components/expander", { title: name, data_attributes:, button_data_attributes: } do %>
     <div class="govuk-!-margin-bottom-0" id="<%= key %>">
       <%= render "govuk_publishing_components/components/input", {
         label: {
