--- a/app/views/finders/_taxon_facet.html.erb
+++ b/app/views/finders/_taxon_facet.html.erb
@@ -1,7 +1,19 @@
 <% unless i_am_a_topic_page_finder %>
+  <%
+    button_data_attributes = {
+      ga4_expandable: "",
+      ga4_event: {
+        event_name: 'select_content',
+        type: 'finder',
+        section: "Topic",
+        index: { index_section: index + 1, index_section_count: count }
+      }
+    }
+  %>
   <%= render "components/expander", {
     title: "Topic",
-    data_attributes: { "ga4-filter-parent": taxon_facet.ga4_section, "ga4-index": { index_section: index + 1, index_section_count: count } }
+    data_attributes: { "ga4-filter-parent": taxon_facet.ga4_section, "ga4-index": { index_section: index + 1, index_section_count: count } },
+    button_data_attributes:
   } do %>
     <div class="js-taxonomy-select" data-ga4-change-category="update-filter select" data-ga4-section="Topic">
       <%= render "govuk_publishing_components/components/select", {
