Fix search filter GA4 indexes

--- a/app/views/finders/_date_facet.html.erb
+++ b/app/views/finders/_date_facet.html.erb
@@ -14,7 +14,8 @@
         event_name: 'select_content',
         type: 'finder',
         section: date_facet.name,
-        index: { index_section: index + 1, index_section_count: count }
+        index_section: index + 1,
+        index_section_count: count,
       }
     }
   } %>
