--- a/app/views/finders/_option_select_facet.html.erb
+++ b/app/views/finders/_option_select_facet.html.erb
@@ -24,7 +24,8 @@
         event_name: 'select_content',
         type: 'finder',
         section: option_select_facet.name,
-        index: { index_section: index + 1, index_section_count: count }
+        index_section: index + 1,
+        index_section_count: count
       }
     }
   } %>
