--- a/app/views/finders/_taxon_facet.html.erb
+++ b/app/views/finders/_taxon_facet.html.erb
@@ -6,7 +6,8 @@
         event_name: 'select_content',
         type: 'finder',
         section: "Topic",
-        index: { index_section: index + 1, index_section_count: count }
+        index_section: index + 1,
+        index_section_count: count,
       }
     }
   %>
